# rustc_codegen_cranelift

./: .cirrus.yml  .gitignore  Cargo.toml  Readme.md  bench_results.md  bench_results.txt  benchmark.txt  build.rs  build.sh  clean_all.sh  cleanup_example.rs  config.sh  config.txt  dedup_rust_error_log.rs  josh-sync.toml  minimal_wasm_module.rs  rust-toolchain  rust-toolchain.toml  rust-version  test.sh  y.rs
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: free-disk-space.sh
.github/workflows/: abi-cafe.yml  cranelift-release-branch.yml  main.yml
build_sysroot/: Cargo.toml  build_sysroot.sh
build_system/: Cargo.toml  abi_cafe.rs  bench.rs  build_backend.rs  build_sysroot.rs  hash.rs  landlock.rs  main.rs  mod.rs  path.rs  prepare.rs  rustc_info.rs  tests.rs  todo.rs  usage.txt  utils.rs
build_system/stdarch_skip/: aarch64_core.txt  aarch64_intrinsics.txt
cranelift-llvm/: Cargo.toml
cranelift-llvm/src/: function.rs  lib.rs
cranelift_c_backend/: Cargo.toml
cranelift_c_backend/src/: data_object.rs  function.rs  lib.rs
example/: alloc_example.rs  example.rs  exception_bench.rs  mini_core.rs  mini_core_hello_world.rs  neon.rs  raw-dylib.rs  std_example.rs
gen_intrinsics/: Cargo.toml
gen_intrinsics/src/: def_visitor.rs  main.rs
patches/: 0001-graviola-Disable-crabgrind-and-bump-aws-lc-rs.patch  0001-stdarch-Disable-SVE.patch  0002-abi-cafe-Disable-broken-tests.patch  0003-rand-Disable-failing-test-on-windows.patch  0023-coretests-Ignore-failing-tests.patch  0024-Don-t-mark-recursive-function-as-inline.patch  0028-stdlib-Avoid-compiling-panic_abort.patch  0028-stdlib-Ensure-va_end-doesn-t-get-emitted-unless-VaList-is-a.patch  0029-stdlib-dylib-crate-type.patch  blake3-lock.toml  image-lock.toml
rustc_perf_bench_css/: Cargo.toml
rustc_perf_bench_css/src/: main.rs
scripts/: abi-cafe-rules.toml  cargo-clif.rs  config.sh  ext_config.sh  jit-helpers.py  rustc-clif.rs  rustdoc-clif.rs  rustup.sh  setup_rust_fork.sh  test_rustc_tests.sh  tests.sh
src/: abi.rs  allocator.rs  analyze.rs  archive.rs  backend.rs  base.rs  cast.rs  codegen_f16_f128.rs  codegen_i128.rs  common.rs  compiler_builtins.rs  concurrency_limiter.rs  config.rs  constant.rs  debuginfo.rs  discriminant.rs  global_asm.rs  inline_asm.rs  jit.rs  lib.rs  main_shim.rs  metadata.rs  num.rs  pointer.rs  pretty_clif.rs  serializable_module.rs  toolchain.rs  trap.rs  unsize.rs  unwind_module.rs  value_and_place.rs
src/abi/: comments.rs  inlining.rs  mod.rs  pass_mode.rs  returning.rs
src/debuginfo/: emit.rs  gcc_except_table.rs  line_info.rs  mod.rs  object.rs  placeholder_types.rs  unwind.rs
src/dll_import_lib/: ar.rs  coff.rs  data.rs  mod.rs  string_table.rs
src/driver/: aot.rs  interpret.rs  jit.rs  lto.rs  mod.rs  wasm.rs
src/intrinsics/: llvm.rs  llvm_aarch64.rs  llvm_x86.rs  mod.rs  simd.rs
