[package]
name = "rustc_codegen_cranelift"
version = "0.1.0"
edition = "2021"

[[bin]]
# This is used just to teach rust-analyzer how to check the build system. required-features is used
# to disable it for regular builds.
name = "y"
path = "./y.rs"
required-features = ["__check_build_system_using_ra"]

[lib]
crate-type = ["dylib"]

[dependencies]
# These have to be in sync with each other
cranelift-codegen = { git = "https://github.com/bjorn3/wasmtime.git", branch = "bsc-unwinding-simple-invoke3", features = ["unwind"] }
cranelift-frontend = { git = "https://github.com/bjorn3/wasmtime.git", branch = "bsc-unwinding-simple-invoke3" }
cranelift-module = { git = "https://github.com/bjorn3/wasmtime.git", branch = "bsc-unwinding-simple-invoke3" }
cranelift-native = { git = "https://github.com/bjorn3/wasmtime.git", branch = "bsc-unwinding-simple-invoke3" }
cranelift-jit = { git = "https://github.com/bjorn3/wasmtime.git", branch = "bsc-unwinding-simple-invoke3", optional = true }
cranelift-object = { git = "https://github.com/bjorn3/wasmtime.git", branch = "bsc-unwinding-simple-invoke3" }
target-lexicon = "0.12.0"
gimli = { version = "0.27.2", default-features = false, features = ["write"]}
object = { version = "0.30.3", default-features = false, features = ["std", "read_core", "write", "archive", "coff", "elf", "macho", "pe", "unaligned"] }
eh_frame_experiments = { git = "https://github.com/bjorn3/eh_frame_experiments.git" }

indexmap = "1.9.3"
libloading = { version = "0.7.3", optional = true }
smallvec = "1.8.1"
pretty_env_logger = "0.4.0"

[patch.crates-io]
# Uncomment to use local checkout of cranelift
#cranelift-codegen = { path = "../wasmtime/cranelift/codegen" }
#cranelift-frontend = { path = "../wasmtime/cranelift/frontend" }
#cranelift-module = { path = "../wasmtime/cranelift/module" }
#cranelift-native = { path = "../wasmtime/cranelift/native" }
#cranelift-jit = { path = "../wasmtime/cranelift/jit" }
#cranelift-object = { path = "../wasmtime/cranelift/object" }

gimli = { git = "https://github.com/bjorn3/gimli.git", branch = "bsc-unwinding-fix-lsda-encoding" }

#[patch."ssh://git@github.com/bjorn3/eh_frame_experiments.git"]
#eh_frame_experiments = { path = "./eh_frame_experiments" }

[features]
# Enable features not ready to be enabled when compiling as part of rustc
unstable-features = ["jit", "inline_asm"]
jit = ["cranelift-jit", "libloading"]
inline_asm = []
__check_build_system_using_ra = []

[package.metadata.rust-analyzer]
rustc_private = true

[profile.release]
debug = 2
debug-assertions = true
